--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,24 +1,22 @@
-<h1>Usuarios registrados</h1>
-<div class="clear"></div>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Primer nombre</th>
-      <th scope="col">Segundo nombre</th>
-      <th scope="col">Primer apellido/th>
-      <th scope="col">Segundo apellido</th>
-      <th scope="col">Teléfono</th>
-      <th scope="col">Dirección</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-  </tbody>
-</table>
+
+    <h1>Usuarios registrados</h1>
+    <div class="clear"></div>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Cedula</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Email</th>
+            <th scope="col">Contraseña</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of users">
+              <td>{{item.cedula}}</td>
+              <td>{{item.nombre}}</td>
+              <td>{{item.email}}</td>
+              <td>{{item.contrasena}}</td>
+          </tr>
+        </tbody>
+      </table>
+
