--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -8,6 +8,7 @@
             <th scope="col">Nombre</th>
             <th scope="col">Email</th>
             <th scope="col">Contraseña</th>
+            <th scope="col">Acción</th>
           </tr>
         </thead>
         <tbody>
@@ -16,6 +17,10 @@
               <td>{{item.nombre}}</td>
               <td>{{item.email}}</td>
               <td>{{item.contrasena}}</td>
+              <td>
+                <img class="img-fluid editIcon" src="../assets/edit.png" (click)="edit(item)" >
+                <img class="img-fluid editIcon" src="../assets/delete.png" (click)="delete(item)" >
+              </td>
           </tr>
         </tbody>
       </table>
